--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ html, body {
     overflow-y: auto;
     position: absolute;
     z-index: 100;
-    top: -1375px;
 }
 
 .p_content {
@@ -151,7 +150,9 @@ ul li {
 }
 
 .animation_children {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     z-index: 1;
 }
 
