--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 html, body {
     height: 100vh;
     padding: 0px;
@@ -31,6 +30,7 @@ html, body {
     overflow-y: auto;
     position: absolute;
     z-index: 100;
+    /* top: -1375px; */
 }
 
 .p_content {
@@ -83,7 +83,7 @@ ul li {
     height: 35px;
     font-size: 20px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 10%;
 }
 
 .form_button:hover{
@@ -158,4 +158,112 @@ ul li {
 
 ::-webkit-scrollbar {
     width: 0px;
+}
+
+
+@media (max-width: 1300px) {
+    .content {
+        padding: calc(20px + (50 - 20) * ((100vw - 320px) / ( 1300 - 320 )));;
+    }
+    .form_button {
+        width: 40px;
+    }
+    .taskCollection {
+        max-width: 70%;
+    }
+    .btn_delete,
+    .btn_add {
+        width: 30px;
+        height: 30px
+    }
+    
+}
+
+@media (max-width: 740px) {
+    .p_content {
+        font-size: 25px;
+    }
+    .content {
+        padding: calc(20px + (50 - 20) * ((100vw - 320px) / ( 740 - 320 )));;
+    }
+    .form_input {
+        max-width: 50%;
+        font-size: 15px;
+    }
+    .taskCollection {
+        max-width: 50%;
+        font-size: 18px;
+    }
+    .btn_delete {
+        width: 25px;
+        height: 25px;
+        font-size: 10px;
+    }
+    .btn_add {
+        width: 25px;
+        height: 25px;
+        right: 30px;
+        font-size: 10px;
+    }
+    .taskZero {
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 610px) {
+    .form_button {
+        width: 20px;
+        height: 20px;
+        font-size: 10px;
+        top: 9px;
+    }
+    .content {
+        padding: calc(10px + (50 - 20) * ((100vw - 320px) / ( 1200 - 320 )));;
+    }
+    .p_content {
+        font-size: 20px;
+    }
+    .form_input {
+        font-size: 10px;
+        height: 20px;
+        top: 5px;
+    }
+    .btn_delete {
+        width: 15px;
+        height: 15px;
+        font-size: 8px;
+    }
+    .btn_add {
+        width: 15px;
+        height: 15px;
+        right: 20px;
+        font-size: 8px;
+    }
+}
+
+@media (max-width: 400px) {
+    .content {
+        padding: calc(10px + (50 - 20) * ((100vw - 320px) / ( 1200 - 320 )));;
+    }
+    .p_content {
+        font-size: 15px;
+    }
+    .form_input {
+        margin-top: 3px;
+        font-size: 8px;
+        height: 15px;
+        top: 5px;
+    }
+    .taskCollection {
+        font-size: 12px;
+    }
+    .btn_delete {
+        top: 8px;
+    }
+    .btn_add {
+        top: 8px;
+    }
+    .taskZero {
+        font-size: 15px;
+    }
 }
