--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ ul li {
     position: absolute;
     right: 50px;
     justify-content: center;
+    align-items: center;
     margin: 5px;
     background-color: #a6ff9b;
     width: 35px;
@@ -136,6 +137,7 @@ ul li {
     position: absolute;
     right: 0px;
     justify-content: center;
+    align-items: center;
     margin: 5px;
     background-color: #ff4f4f;
     width: 35px;
@@ -241,6 +243,25 @@ ul li {
     }
 }
 
+@media (max-width: 460px) {
+    .p_content {
+        font-size: 15px;
+    }
+    .taskCollection {
+        font-size: 15px;
+        align-items: center;
+    }
+    .form_button:hover{
+        background-color: #fff;
+        box-shadow: none;
+        font-size: 10px;
+        border-radius: 10%;
+    }
+    .taskZero {
+        font-size: 15px;
+    }
+}
+
 @media (max-width: 400px) {
     .content {
         padding: calc(10px + (50 - 20) * ((100vw - 320px) / ( 1200 - 320 )));;
@@ -256,13 +277,9 @@ ul li {
     }
     .taskCollection {
         font-size: 12px;
+        align-items: center;
     }
-    .btn_delete {
-        top: 8px;
-    }
-    .btn_add {
-        top: 8px;
-    }
+
     .taskZero {
         font-size: 15px;
     }
