--- a/css/style.css
+++ b/css/style.css
@@ -262,11 +262,22 @@ ul li {
         font-size: 15px;
         align-items: center;
     }
-    .form_button:hover{
-        background-color: #fff;
-        box-shadow: none;
-        font-size: 10px;
-        border-radius: 10%;
+    .form_input {
+        min-width: 95%;
+    }
+    .form_button {
+        display: none;
+    }
+    .btn_delete {
+        width: 15px;
+        height: 15px;
+        font-size: 5px;
+    }
+    .btn_add {
+        width: 15px;
+        height: 15px;
+        right: 20px;
+        font-size: 5px;
     }
     .taskZero {
         font-size: 15px;
